fixed overflow

--- a/src/components/OpenDay/OpenDay.scss
+++ b/src/components/OpenDay/OpenDay.scss
@@ -66,7 +66,7 @@
   margin: 0;
   text-align: center;
   max-height: 120px;
-  overflow-y: scroll;
+  overflow: auto;
   li {
     padding: 5px;
   }
